# AnyPeek

./: .gitignore  README.md  deno.json  deno.server.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.cloudflare.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: deploy.yml  sync.yml
api/: file.ts  healthz.ts
docs/: CONTRIBUTING.md  DEPLOYMENT.md  MAINTAINERS.md  MAINTAINER_DEPLOY_SETUP.md  README.md  TECHNICAL_DETAILS.md
scripts/: clean.mjs
server/: app.ts  index.ts  remote-proxy.test.ts  remote-proxy.ts
src/: App.tsx  branding.ts  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: AppIcons.tsx  EmptyState.tsx  MetadataBar.tsx  PreviewPane.tsx  Toolbar.tsx  WindowRail.tsx
src/hooks/: usePreviewHistory.ts  usePreviewWorkbench.ts
src/platform/: download.ts  tauri.ts
worker/: index.ts
