[package]
name = "anypeek"
version = "0.2.0"
edition = "2021"
description = "Desktop shell for AnyPeek"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["net"] }
url = "2"
urlencoding = "2"
